[gd_scene format=3 uid="uid://bxue7p844nv7d"]

[ext_resource type="Script" uid="uid://ce3s23apcqhow" path="res://scripts/title_screen.gd" id="1_fgkus"]

[node name="TitleScreen" type="Node2D" unique_id=1287481627]
script = ExtResource("1_fgkus")

[node name="MainPanel" type="Panel" parent="." unique_id=2096537197]
unique_name_in_owner = true
offset_right = 187.0
offset_bottom = 188.0

[node name="HostGameButton" type="Button" parent="MainPanel" unique_id=75787454]
unique_name_in_owner = true
layout_mode = 0
offset_left = 49.0
offset_top = 53.0
offset_right = 143.0
offset_bottom = 84.0
text = "Host Game"

[node name="JoinGameButton" type="Button" parent="MainPanel" unique_id=1984129057]
unique_name_in_owner = true
layout_mode = 0
offset_left = 51.0
offset_top = 97.0
offset_right = 145.0
offset_bottom = 128.0
text = "Join Game"

[node name="JoinPanel" type="Panel" parent="." unique_id=695321650]
unique_name_in_owner = true
offset_left = 224.0
offset_top = 1.0
offset_right = 411.0
offset_bottom = 271.0

[node name="ConnectButton" type="Button" parent="JoinPanel" unique_id=1759602935]
unique_name_in_owner = true
layout_mode = 0
offset_left = 47.0
offset_top = 185.0
offset_right = 141.0
offset_bottom = 216.0
text = "Join
"

[node name="BackButton" type="Button" parent="JoinPanel" unique_id=644963433]
unique_name_in_owner = true
layout_mode = 0
offset_left = 47.0
offset_top = 225.0
offset_right = 141.0
offset_bottom = 256.0
text = "Back
"

[node name="IPLineEdit" type="LineEdit" parent="JoinPanel" unique_id=821240118]
unique_name_in_owner = true
layout_mode = 0
offset_left = 29.0
offset_top = 47.0
offset_right = 159.0
offset_bottom = 78.0
placeholder_text = "127.0.0.1"

[node name="PortLineEdit" type="LineEdit" parent="JoinPanel" unique_id=1411946905]
unique_name_in_owner = true
layout_mode = 0
offset_left = 29.0
offset_top = 126.0
offset_right = 159.0
offset_bottom = 157.0
placeholder_text = "6967"

[node name="IPLabel" type="Label" parent="JoinPanel" unique_id=1847340233]
layout_mode = 0
offset_left = 33.0
offset_top = 23.0
offset_right = 158.0
offset_bottom = 46.0
text = "IP Address:"

[node name="ToolTipLabel" type="Label" parent="JoinPanel" unique_id=544092920]
layout_mode = 0
offset_left = 20.0
offset_top = 5.0
offset_right = 165.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 10
text = "Leave blank for default values"

[node name="PortLabel" type="Label" parent="JoinPanel" unique_id=1524361010]
layout_mode = 0
offset_left = 31.0
offset_top = 99.0
offset_right = 156.0
offset_bottom = 122.0
text = "Port:"
